--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,18 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="theme-color" content="#157878">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/normalize.css" rel="stylesheet">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/home_page.css" rel="stylesheet">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/cayman.css" rel="stylesheet">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/personalize.css" rel="stylesheet">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/popout.css" rel="stylesheet">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/algo_note.css" rel="stylesheet">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/normalize.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/home_page.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/cayman.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/personalize.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/popout.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/algo_note.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/popout2.css">
 
   <!-- Script Header for Table of Content Area -->
   <script src="{{ site.baseurl }}/js/toc_generator.js"></script>
-
-  <!-- Script Header for Popup Window -->
-  <script src="{{ site.baseurl }}/js/error_report_popup.js"></script>
 
   <!-- Script Header Enable MathJax display -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.1/MathJax.js?config=TeX-AMS-MML_HTMLorMML" type="text/javascript"></script>
