--- a/css/cayman.css
+++ b/css/cayman.css
@@ -98,7 +98,7 @@
 
 body { padding: 0; margin: 0; font-family: "Helvetica", "Helvetica Neue", Helvetica, Arial, sans-serif; font-size: 16px; line-height: 1.5; color: #1E1E1E; }
 
-a { color: #1e6bb8; text-decoration: none; }
+a { color: #1e6bb8; text-decoration: none; margin-right: 4px; }
 a:hover { text-decoration: underline; }
 
 .main-content a { color: #2b2f31; text-decoration: #BBC8CB underline; background-color: #EAFAFE; padding: 2px; text-underline-offset: 3px;}
