--- a/css/personalize.css
+++ b/css/personalize.css
@@ -111,7 +111,7 @@
   position: fixed;
   bottom: 0px;
   right: 0px;
-  background-color: rgba(255, 163, 43, 0.459);
+  background-color: rgba(255, 163, 43);
   color: black;
   border-radius: 24px;
   padding: 3px 5px;
