--- a/_layouts/algo_note.html
+++ b/_layouts/algo_note.html
@@ -33,7 +33,9 @@ Author: Anonymous
 <hr/>
 {% endif %}
 
-<div class="warn-button" onclick="showErrorReport()">⚠</div>
+<div class="warn-button" onClick="window.location.href='#report-problem'">
+    <img src="{{ site.baseurl }}\assets\warning.svg" style="display: inline; height: 35px; width: 35px"></img>
+</div>
 {% if page.comments != false %}
     {% include comment.html %}
 {% endif %}
