--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -12,7 +12,7 @@ Author: Anonymous
 <hr/>
 {% endif %}
 
-<div class="warn-button" onclick="showErrorReport()">
+<div class="warn-button" onClick="window.location.href='#report-problem'">
     <img src="{{ site.baseurl }}\assets\warning.svg" style="display: inline; height: 35px; width: 35px"></img>
 </div>
 {% if page.comments != false %}
