--- a/css/cayman.css
+++ b/css/cayman.css
@@ -104,6 +104,8 @@ a:hover { text-decoration: underline; }
 .main-content a { color: #2b2f31; text-decoration: #BBC8CB underline; background-color: #EAFAFE; padding: 2px; text-underline-offset: 3px;}
 .main-content a:hover { background-color: #BBEFFD; }
 .main-content a::before { background: url(../assets/link.svg); background-size: 1rem 1rem; content: " "; width: 1.2rem; height: 1.2rem; padding: 0 1.3rem 0 0; background-repeat: no-repeat; text-decoration: none;}
+.clear{ background-color: transparent; padding: 0; margin: 0; text-decoration: none; border-color: transparent;}
+.clear::before { background: none; }
 
 .btn { display: inline-block; margin-bottom: 1rem; color: #444444; background-color: rgba(255, 255, 255, 0.08); border-color: #aaaaaa; border-style: solid; border-width: 1px; border-radius: 0.3rem; transition: color 0.2s, background-color 0.2s, border-color 0.2s; }
 .btn:hover { color: #777777; text-decoration: none; background-color: rgba(255, 255, 255, 0.2); border-color: #eeeeee; }
