--- a/css/personalize.css
+++ b/css/personalize.css
@@ -106,6 +106,10 @@
   transition: box-shadow .2s linear,opacity .2s linear;
 }
 
+.main-button-disable{
+  cursor:pointer; background-color: rgb(218, 218, 218); color: black; border-radius: 24px; padding: 12px 24px; margin: 16px; max-width: fit-content; border-style: none; outline: none; color: rgb(167, 167, 167);
+}
+
 .warn-button{
   cursor:pointer;
   position: fixed;
