--- a/css/normalize.css
+++ b/css/normalize.css
@@ -414,9 +414,10 @@ optgroup {
  */
 
 table {
-  border-collapse: collapse;
   border-spacing: 0;
-  margin:0 auto;
+  width: 100%;
+  margin-left: auto; margin-right: auto;
+  overflow-x: auto;
 }
 
 td,
@@ -429,6 +430,11 @@ tr{
   transition: 0.5s;
 }
 tr:hover{
-  background-color: rgba(238, 238, 238, 0.4);
+  background-color: #f2f2f2;
   transition: 0.5s;
+}
+
+tr:nth-child(even) {
+  background-color: #f2f2f2;
+  background-color: rgba(238, 238, 238, 0.4);
 }
