--- a/css/popout.css
+++ b/css/popout.css
@@ -1,22 +1,68 @@
-.popup-black-background{
-    height: 100vh;
-    width: 100vw;
-    top: 0px;
-    left: 0px;
-    position: fixed;
-    z-index: 1000;
-    background-color: rgba(0, 0, 0, 0.5);
+.container {
+  background-color: #9191e9;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100vw;
+  height: 100vh;
 }
 
-.popup-warn-window{
-    position: fixed;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    background-color: rgb(255, 245, 189);
-    z-index: 1001;
-    padding: 30px;
-    border-radius: 10px;
+.popup {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  position: fixed;
+  width: 100vw;
+  height: 100vh;
+  bottom: 0;
+  right: 0;
+  background-color: rgba(0, 0, 0, 0.8);
+  z-index: 1002;
+  visibility: hidden;
+  opacity: 0;
+  overflow: hiden;
+  transition: 0.64s ease-in-out;
+}
+.popup-inner {
+  position: relative;
+  bottom: -100vw;
+  right: -100vh;
+  display: block;
+  align-items: center;
+  max-width: 1000px;
+  max-height: 800px;
+  width: 80%;
+  height: 85%;
+  background-color: #fff;
+  transform: rotate(32deg);
+  transition: 0.64s ease-in-out;
+  border-radius: 10px;
+  overflow-y: auto;
 }
 
-@media screen and (max-width: 1000px){.warn-image{display: none;}}
+.popup:target {
+  visibility: visible;
+  opacity: 1;
+}
+.popup:target .popup-inner {
+  bottom: 0;
+  right: 0;
+  transform: rotate(0);
+}
+.popup__close {
+  position: absolute;
+  right: 1rem;
+  top: 1rem;
+  width: 3rem;
+  height: 3rem;
+  font-size: 0.875rem;
+  font-weight: 300;
+  border-radius: 100%;
+  background-color: #0a0a0a;
+  z-index: 1003;
+  color: #fff;
+  line-height: 3rem;
+  text-align: center;
+  cursor: pointer;
+  text-decoration: none;
+}
