--- a/css/cayman.css
+++ b/css/cayman.css
@@ -104,6 +104,11 @@ a:hover { text-decoration: underline; }
 .main-content a { color: #2b2f31; text-decoration: #BBC8CB underline; background-color: #EAFAFE; padding: 2px; text-underline-offset: 3px;}
 .main-content a:hover { background-color: #BBEFFD; }
 .main-content a::before { background: url(../assets/link.svg); background-size: 1rem 1rem; content: " "; width: 1.2rem; height: 1.2rem; padding: 0 1.3rem 0 0; background-repeat: no-repeat; text-decoration: none;}
+
+a.tag {color: white;font-size: 1rem;font-weight: normal;background-color: #039aff;border-radius: 10px;padding: 2px 5px;text-decoration: none;}
+a.tag::before { display: none; }
+a.tag:hover { background-color: #015d9b; }
+
 .clear{ background-color: transparent; padding: 0; margin: 0; text-decoration: none; border-color: transparent;}
 .clear::before { background: none; }
 
@@ -229,7 +234,7 @@ a:hover { text-decoration: underline; }
 .main-content .notification{ background-color: rgb(250, 247, 194); padding: 0 1rem; margin-left: 0; border-left: 0.4rem solid orange; padding: 1rem; margin: 1rem 0 1rem 0;}
 .notification h1,.notification h2,.notification h3,.notification h4,.notification h5{ color: rgb(184, 120, 3); }
 
-.main-content table { width: 100%; overflow: auto; word-break: normal; word-break: keep-all; -webkit-overflow-scrolling: touch; }
+.main-content table { width: 100%; overflow: auto; word-break: normal; word-break:normal; -webkit-overflow-scrolling: touch; }
 .main-content table th { font-weight: bold; }
 .main-content table th, .main-content table td { padding: 0.5rem 1rem; border: 1px solid #e9ebec; }
 .main-content dl { padding: 0; }
