--- a/_includes/article-head.html
+++ b/_includes/article-head.html
@@ -1,6 +1,6 @@
 <div>
     <div
-        style="display: flex; flex-direction: row; justify-content: space-between; flex-wrap: wrap;"
+        style="display: flex; flex-direction: row; justify-content: space-between; flex-wrap: wrap; align-items: baseline;"
     >
         <h2 style="border-bottom: none; margin-bottom: 0;"><strong>{{ page.title }}</strong></h2>
         <div>
