--- a/_includes/report-problem.html
+++ b/_includes/report-problem.html
@@ -1,19 +1,25 @@
 <div class="popup" id="report-problem">
     <div
         class="popup-inner"
-        style=" background-image: url({{site.baseurl}}/assets/warning.svg); 
+        style="background-image: url({{site.baseurl}}/assets/warning.svg); 
                 background-repeat: no-repeat;
-                background-size: 45%;
+                background-size: 30%;
                 background-position: bottom right;"
     >
         <section class="main-content">
-            <h2>报告错误</h2>
-            <p>如果你发现该网页中存在错误/显示异常，可以从以下两种方式向我们报告错误，我们会尽快修复。</p>
+            <h2 class="toc_ignore">报告错误</h2>
+            <p>如果你发现该网页中存在错误/显示异常，可以从以下两种方式向我们报告错误，我们会尽快修复：</p>
             <ol>
                 <li>使用 <strong>CS Club 网站错误</strong> 为主题，附上错误截图或描述及网址后发送邮件到 286988023@qq.com </li>
                 <li>在我们的网站代码仓库中创建一个 issue 并在 issue 中描述问题 <a href="https://gitee.com/gwcompsci/gwcompsci/issues">点击链接前往Gitee仓库</a></li>
             </ol>
         </section>
-        <a class="popup__close" href="#">X</a>
+        <div class="popup__close" style="background-color: rgb(255, 255, 255);">
+            <img src="{{ site.baseurl }}/assets/back.svg"
+                height="45px"
+                style="margin: 1rem -0.8rem 1rem; cursor:pointer;"
+                onClick="window.location.href='#'"
+            />
+        </div>
     </div>
 </div>
