--- a/_includes/page-toc.html
+++ b/_includes/page-toc.html
@@ -7,7 +7,7 @@
             renameHTag(item);
             //获取标签的名字,h1,还是h2
             var tag = $(item).get(0).localName;
-            if (tag !== "h1"){
+            if (tag !== "h1"&& !$(item).get(0).className.includes("toc_ignore")){
               //为该标签设置id属性
               $(item).attr("id", "h" + i);
               $("#category").append('<a class="new' + tag + '" href="#h' + i + '">' + $(item).text() + '</a></br>');
@@ -20,7 +20,8 @@
             }
         });
         //设置class选择器为.book-body的html内容
-        $(".book-body").html($(".book-body").nextAll())
+        $(".book-body").html($(".book-body").nextAll());
+        console.log(document);
     });
 </script>
 <div class="book-summary" id="category">
