Update #report-problem Style, Render USACO Card using _includes/fn/usaco_analysis_card.html, Major update on USACO Analysis Page, new 2D Prefix Sum Page

--- a/_includes/report-problem.html
+++ b/_includes/report-problem.html
@@ -10,7 +10,7 @@
             <h2 class="toc_ignore">报告错误</h2>
             <p>如果你发现该网页中存在错误/显示异常，可以从以下两种方式向我们报告错误，我们会尽快修复：</p>
             <ol>
-                <li>使用 <strong>CS Club 网站错误</strong> 为主题，附上错误截图或描述及网址后发送邮件到 286988023@qq.com </li>
+                <li>使用 <strong>CS Club 网站错误</strong> 为主题，附上错误截图或描述及网址后发送邮件到 {{ site.email }} </li>
                 <li>在我们的网站代码仓库中创建一个 issue 并在 issue 中描述问题 <a href="https://gitee.com/gwcompsci/gwcompsci/issues">点击链接前往Gitee仓库</a></li>
             </ol>
         </section>
