Optimize Code Block Display from Daurlica Theme > Atom One Dark Theme, increase code font size

--- a/_layouts/algo_note.html
+++ b/_layouts/algo_note.html
@@ -37,5 +37,5 @@ Author: Anonymous
     <img src="{{ site.baseurl }}\assets\warning.svg" style="display: inline; height: 35px; width: 35px"></img>
 </div>
 {% if page.comments != false %}
-    {% include comment.html %}
+    {% include thirdParty/comment.html %}
 {% endif %}
