--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,8 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/css/cayman.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/personalize.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/popout.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/algo_note.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/codeHightlight.css">
+  <!--<link rel="" href="{{ site.baseurl }}/scss/codeHightlight.scss">-->
 
   <!-- Script Header for Table of Content Area -->
   <script src="{{ site.baseurl }}/js/toc_generator.js"></script>
