--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -16,5 +16,5 @@ Author: Anonymous
     <img src="{{ site.baseurl }}\assets\warning.svg" style="display: inline; height: 35px; width: 35px"></img>
 </div>
 {% if page.comments != false %}
-    {% include comment.html %}
+    {% include thirdParty/comment.html %}
 {% endif %}
