Update css home_page > sass home_page

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -6,12 +6,11 @@
   <meta name="theme-color" content="#157878">
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ site.baseurl }}/css/normalize.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/home_page.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/cayman.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/personalize.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/popout.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/codeHightlight.css">
-  <!--<link rel="" href="{{ site.baseurl }}/scss/codeHightlight.scss">-->
+  <link rel="stylesheet" href="{{ site.baseurl }}/sass/homepage.css>
 
   <!-- Script Header for Table of Content Area -->
   <script src="{{ site.baseurl }}/js/toc_generator.js"></script>
@@ -31,7 +30,7 @@
     (function() {
       var hm = document.createElement("script");
       hm.src = "https://hm.baidu.com/hm.js?1d1abbfeb50113aa21bb45c09fd225fa";
-      var s = document.getElementsByTagName("script")[0]; 
+      var s = document.getElementsByTagName("script")[0];
       s.parentNode.insertBefore(hm, s);
     })();
   </script>
