--- a/_includes/head.html
+++ b/_includes/head.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="{{ site.baseurl }}/css/personalize.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/popout.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/codeHightlight.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/sass/homepage.css>
+  <link rel="stylesheet" href="{{ site.baseurl }}/sass/homepage.css">
 
   <!-- Script Header for Table of Content Area -->
   <script src="{{ site.baseurl }}/js/toc_generator.js"></script>
