delete useless code in personalize.sass, change in 404.html

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,7 +7,7 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ site.baseurl }}/css/normalize.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/cayman.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/css/personalize.css">
+  <link rel="stylesheet" href="{{ site.baseurl }}/sass/personalize.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/popout.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/codeHightlight.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/sass/homepage.css">
