--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,10 +7,10 @@
   <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,700' rel='stylesheet' type='text/css'>
   <link rel="stylesheet" href="{{ site.baseurl }}/css/normalize.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/cayman.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/sass/personalize.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/popout.css">
   <link rel="stylesheet" href="{{ site.baseurl }}/css/codeHightlight.css">
-  <link rel="stylesheet" href="{{ site.baseurl }}/sass/homepage.css">
+
+  <link rel="stylesheet" href="{{ site.baseurl }}/css/main.css">
 
   <!-- Script Header for Table of Content Area -->
   <script src="{{ site.baseurl }}/js/toc_generator.js"></script>
