--- a/_layouts/algo_note.html
+++ b/_layouts/algo_note.html
@@ -20,8 +20,12 @@ Author: Anonymous
 <blockquote>
     <p>你使用哪种语言？我们会根据你选择的语言显示对应的代码示例</p>
     <div class="button-box" style="margin-top: -20px;">
-        <div class="main-button" id="pySelector" onclick="selectPython()" style="border-radius: 10px 0 0 10px; margin-right: 0px">Python</div>
-        <div class="main-button" id="javaSelector" onclick="selectJava()" style="border-radius: 0 10px 10px 0; margin-left: 0px">Java</div>
+        <div class="main-button" id="pySelector" onclick="selectPython()" style="border-radius: 10px 0 0 10px; margin-right: 0px">
+            {% include fn/icon.html type="python" size="2rem" %} Python
+        </div>
+        <div class="main-button" id="javaSelector" onclick="selectJava()" style="border-radius: 0 10px 10px 0; margin-left: 0px">
+            Java {% include fn/icon.html type="java" size="2rem" %}
+        </div>
     </div>
 </blockquote>
 
