Fix report-problem issue#2

--- a/_layouts/algo_note.html
+++ b/_layouts/algo_note.html
@@ -12,7 +12,7 @@ Author: Anonymous
   <script src="{{ site.baseurl }}/js/algorithmLangSelector.js"></script>
 </head>
 <script>window.onload = selectPython</script>
-{% include report_problem.html %}
+{% include report-problem.html %}
 
 {% include article-head.html %}
 
@@ -37,7 +37,7 @@ Author: Anonymous
 <hr/>
 {% endif %}
 
-<div class="warn-button" onClick="window.location.href='#report_problem'">
+<div class="warn-button" onClick="window.location.href='#report-problem'">
     <img src="{{ site.baseurl }}\assets\warning.svg" style="display: inline; height: 35px; width: 35px"></img>
 </div>
 {% if page.comments != false %}
