--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -3,7 +3,7 @@ layout: default
 comments: false
 Author: Anonymous
 ---
-{% include report_problem.html %}
+{% include report-problem.html %}
 {% include article-head.html %}
 
 {{ content }}
@@ -12,7 +12,7 @@ Author: Anonymous
 <hr/>
 {% endif %}
 
-<div class="warn-button" onClick="window.location.href='#report_problem'">
+<div class="warn-button" onClick="window.location.href='#report-problem'">
     <img src="{{ site.baseurl }}\assets\warning.svg" style="display: inline; height: 35px; width: 35px"></img>
 </div>
 {% if page.comments != false %}
