--- a/_layouts/algo_note.html
+++ b/_layouts/algo_note.html
@@ -9,26 +9,12 @@ Author: Anonymous
   <script src="https://cdn.bootcdn.net/ajax/libs/highlight.js/10.5.0/highlight.min.js"></script>
   <script>hljs.initHighlightingOnLoad();</script>
   <!-- Script Header for Code Language Selector in Algo Notes -->
-  <script src="{{ site.baseurl }}/js/algorithmLangSelector.js"></script>
 </head>
-<script>window.onload = selectPython</script>
 {% include report-problem.html %}
-
 {% include article-head.html %}
 
 <!-- Language Selector -->
-<blockquote>
-    <p>你使用哪种语言？我们会根据你选择的语言显示对应的代码示例</p>
-    <div class="button-box" style="margin-top: -20px;">
-        <div class="main-button" id="pySelector" onclick="selectPython()" style="border-radius: 10px 0 0 10px; margin-right: 0px">
-            {% include fn/icon.html type="python" size="2rem" %} Python
-        </div>
-        <div class="main-button" id="javaSelector" onclick="selectJava()" style="border-radius: 0 10px 10px 0; margin-left: 0px">
-            Java {% include fn/icon.html type="java" size="2rem" %}
-        </div>
-    </div>
-</blockquote>
-
+{%include algorithmLangSelector.html%}
 {{ content }}
 
 
