--- a/css/normalize.css
+++ b/css/normalize.css
@@ -5,7 +5,8 @@
  * 2. Prevent iOS text size adjust after orientation change, without disabling
  *    user zoom.
  */
-
+ @import url("https://fonts.googleapis.com/css2?family=Quicksand&display=swap");
+ /* imported url for link animations */
 html {
   font-family: sans-serif; /* 1 */
   -ms-text-size-adjust: 100%; /* 2 */
@@ -87,7 +88,7 @@ template {
  */
 
 a {
-  background-color: transparent;
+  background-color: #fff;
 }
 
 /**
@@ -98,7 +99,104 @@ a:active,
 a:hover {
   outline: 0;
 }
+/* new animations for link starts here */
+.link {
+  position: absolute;
+  right: 1rem;
+  top: 0.8rem;
+  height: 32px;
+  align-items: center;
+  color: #000;
+  text-decoration: none;
+  display: flex;
+}
 
+/* Hide extra text */
+.mask {
+  position: relative;
+  padding: 0;
+  height: 16px;
+
+  /*  Remove overflow to see how it works　:) */
+  overflow: hidden;
+}
+
+.link-container {
+  transition: transform 0.4s ease;
+}
+
+.title {
+  display: block;
+
+  /*  Set same font-size and line height  */
+  font-size: 20px;
+  line-height: 20px;
+
+  transition: transform 0.4s ease;
+}
+
+.link-title1 {
+  transform-origin: right center;
+}
+
+.link-title2 {
+  transform-origin: left center;
+  transform: rotate(20deg);
+}
+
+.link-icon {
+  position: relative;
+  width: 26px;
+  height: 26px;
+  background:#ffffff;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: 10px;
+
+  /*  Remove overflow to see how it works　:) */
+  overflow: hidden;
+}
+
+.icon {
+  display: block;
+  position: absolute;
+  transition: transform 0.4s ease;
+}
+
+.icon:nth-child(2) {
+  transform: translate(-40px);
+  margin-top:2px;
+  width: 26px;
+  height:26px;
+}
+
+/* Hover Action*/
+
+/* Move up two texts (20px = font-size) */
+.link:hover .link-container {
+  transform: translateY(-20px);
+}
+
+/* Rotate texts a little bit */
+.link:hover .link-title1 {
+  transform: rotate(20deg);
+}
+
+.link:hover .link-title2 {
+  transform: rotate(0);
+}
+
+/* Move arrows to right */
+.link:hover .icon:first-child {
+  transform: translate(40px);
+}
+
+.link:hover .icon:nth-child(2) {
+  transform: translate(0px);
+}
+/* annimation for link  */
 /* Text-level semantics
    ========================================================================== */
 
