--- a/_sass/search.sass
+++ b/_sass/search.sass
@@ -1,11 +1,11 @@
-input[id="search-input"]
+input
   font-size: 1.3rem
   padding: 0.6rem 0.6rem 0.6rem 1.26rem
   width: 100%
   outline-style: none
   border: solid 2px #13227a
   border-radius: 1.26rem
-  font-weight: bold
+  margin-bottom: 1.5rem
 
 ul[id="results-container"]
   li
