--- a/_layouts/algo_note.html
+++ b/_layouts/algo_note.html
@@ -24,7 +24,7 @@ Author: Anonymous
 {% endif %}
 
 <div class="warn-button" onClick="window.location.href='#report-problem'">
-    <img src="{{ site.baseurl }}\assets\warning.svg" style="display: inline; height: 35px; width: 35px"></img>
+    <img src="{{ site.baseurl }}/assets/warning.svg" style="display: inline; height: 35px; width: 35px"></img>
 </div>
 {% if page.comments != false %}
     {% include thirdParty/comment.html %}
