--- a/_layouts/home_page.html
+++ b/_layouts/home_page.html
@@ -35,13 +35,13 @@ useTOC: true
     <section class="main-page-header">
         <div class="main-header-container">
         <!--<div class="main-project-name">{{ site.title }}</div>-->
-        <img src="\assets\logo.png" height="65%" width="65%" style="display:block; margin: 0 auto 0 auto;"/>
+        <img src="/assets/logo.png" height="65%" width="65%" style="display:block; margin: 0 auto 0 auto;"/>
         <span class="text-slider-items" style="display: none;"> 
             A place for everyone who ❤ Computer Science | A place to learn Algorithms | A place to learn Artificial Intelligence | A place to share knowledge | A place to create Cool Stuff | A place to show your Project
         </span> 
         <p><span class="main-project-tagline"></span></p>
         <!--<a href="https://gitee.com/gwcompsci/gwcompsci" class="btn">View on Gitee</a>-->
-        <div class="main-flow-arrow"><img src="{{ site.baseurl }}\assets\down_arrow.svg" style="display: block; zoom: 40%; margin: 25vh auto 0 auto"></img></div>
+        <div class="main-flow-arrow"><img src="{{ site.baseurl }}/assets/down_arrow.svg" style="display: block; zoom: 40%; margin: 25vh auto 0 auto"></img></div>
         </div>
         <script> 
             if ($(".main-project-tagline").length == 1) { 
