--- a/_sass/search.sass
+++ b/_sass/search.sass
@@ -7,6 +7,15 @@ input
   border-radius: 1.26rem
   margin-bottom: 1.5rem
 
+select
+  font-size: 1.3rem
+  padding: 0.6rem 0.6rem 0.6rem 1.26rem
+  width: 100%
+  outline-style: none
+  border: solid 2px #13227a
+  border-radius: 1.26rem
+  margin-bottom: 1.5rem
+
 ul[id="results-container"]
   li
     list-style: none
