--- a/_sass/homepage.sass
+++ b/_sass/homepage.sass
@@ -12,8 +12,8 @@
   width: calc(100% / 3 - 2rem)
   min-height: 200px
   min-width: 400px
-  margin-bottom: 2rem
-  margin-right: 2rem
+  margin: 1rem
+  margin-top: 1rem !important
   border-radius: 10px
   padding: 20px
   box-shadow: 0 0 36px rgba(0, 0, 0 , 0.1)
@@ -31,6 +31,7 @@
   p
     flex-basis: 60%
     flex-grow: 1
+
 .pop-card
   transition: 0.2s
 
